DNN-10443: fixed layout issue on Add New Site UI

--- a/src/Modules/Manage/Dnn.PersonaBar.Sites/Sites.Web/src/components/CreatePortal/style.less
+++ b/src/Modules/Manage/Dnn.PersonaBar.Sites/Sites.Web/src/components/CreatePortal/style.less
@@ -29,8 +29,8 @@
             margin-top: 25px;
             .dnn-radio-buttons {
                 padding-top: 6px;
-                > label {
-                    margin-right: 25px;
+                > ul {
+                    display: table;
                 }
             }
             .dnn-radio-buttons ul li label {
